<resources>
    <string name="app_name">MyRentApp</string>

    <string name="hint_TnFirstName">Nombres:</string>
    <string name="hint_TnLastName">Apellidos:</string>
    <string name="hint_TnEmail">Correo Electrónico:</string>
    <string name="hint_TnPhone">Teléfono:</string>
    <string name="hint_TnDNI">DNI:</string>
    <string name="hint_TnStatus">Estado:</string>
    <string name="hint_TnType">Tipo:</string>
    <string name="hint_TnGender">Género:</string>

    <string name="hint_Password_Login">Contraseña:</string>
    <string name="hint_Email_Login">Correo:</string>
    <string name="btn_Ingresar_Login">Ingresar</string>

    <string name="hint_UserFirstName">Nombres:</string>
    <string name="hint_UserLastName">Apellidos:</string>
    <string name="hint_UserName">Nombre usuario:</string>
    <string name="hint_UserPassword">Contraseña:</string>
    <string name="hint_UserEmail">Email:</string>

    <string name="text_title">Gestión de Inquilinos</string>

    <string name="btn_save">Guardar registro</string>
    <string name="btn_edit">Editar registro</string>
    <string name="btn_back">Regresar</string>

    <string-array name="spnrGender">
        <item name="spnrItm1">-- Seleccione--</item>
        <item name="spnrItm2">Masculino</item>
        <item name="spnrItm3">Femenino</item>
        <item name="spnrItm4">Prefiero no decirlo</item>
    </string-array>

    <string-array name="spnrType">
        <item name="spnrItm1">-- Seleccione --</item>
        <item name="spnrItm2">Universitario UNU</item>
        <item name="spnrItm3">Pre-universitario UNU</item>
        <item name="spnrItm4">Tecnólogo Suiza</item>
        <item name="spnrItm5">Otro</item>
    </string-array>


    <string name="lbl_state">Estado:</string>

    <string name="lbl_capacity">Capacidad:</string>
    <string name="lbl_price_per_month">Precio:</string>
    <string name="lbl_month">mensual</string>
    <string name="lbl_available">Disponible:</string>

    <string name="lbl_room_number">Número:</string>
    <string name="lbl_room_description">Descripción:</string>
    <string name="lbl_room_material">Material:</string>

    <string name="rest_search">Buscar...</string>

</resources>