<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTenantActivity">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnFirstName" />

    <EditText
        android:id="@+id/txtTnFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_TnFirstName"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnLastName" />

    <EditText
        android:id="@+id/txtTnLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_TnLastName"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnEmail" />

    <EditText
        android:id="@+id/txtTnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_TnEmail"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnPhone" />

    <EditText
        android:id="@+id/txtTnPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_TnPhone"
        android:inputType="phone"
        android:maxLength="9"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnDNI" />

    <EditText
        android:id="@+id/txtTnDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_TnDNI"
        android:inputType="number"
        android:maxLength="8"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnStatus" />

    <EditText
        android:id="@+id/txtTnStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_TnStatus"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnType" />

    <Spinner
        android:id="@+id/spnrType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/viewGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnGender" />

    <Spinner
        android:id="@+id/spnrGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:backgroundTint="@color/cardview_dark_background"
        android:textSize="24sp" />

</LinearLayout>