<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TenantAddActivity">

    <!-- Espacio vacío arriba -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_TnFirstName" />

        <EditText
            android:id="@+id/txtTnFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_TnFirstName"
            android:inputType="text"
            android:maxLength="25"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/viewApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_TnLastName" />

        <EditText
            android:id="@+id/txtTnLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_TnLastName"
            android:inputType="text"
            android:maxLength="25"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_TnEmail" />

        <EditText
            android:id="@+id/txtTnEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_TnEmail"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_TnPhone" />

        <EditText
            android:id="@+id/txtTnPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_TnPhone"
            android:inputType="phone"
            android:maxLength="9"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_TnDNI" />

        <EditText
            android:id="@+id/txtTnDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_TnDNI"
            android:inputType="number"
            android:maxLength="8"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_TnType" />

        <Spinner
            android:id="@+id/spnrType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_TnGender" />

        <Spinner
            android:id="@+id/spnrGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/btn_back"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- Espacio vacío arriba -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>