<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewTenantActivity">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnFirstName" />

    <EditText
        android:id="@+id/txtTnFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnLastName" />

    <EditText
        android:id="@+id/txtTnLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnEmail" />

    <EditText
        android:id="@+id/txtTnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnPhone" />

    <EditText
        android:id="@+id/txtTnPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnDNI" />

    <EditText
        android:id="@+id/txtTnDNI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnStatus" />

    <EditText
        android:id="@+id/txtTnStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnType" />

    <EditText
        android:id="@+id/txtTnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_TnGender" />

    <EditText
        android:id="@+id/txtTnGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_editar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        android:backgroundTint="@color/cardview_dark_background"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fatDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_delete" />

</LinearLayout>