<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManagementAccountActivity">

    <!-- Espacio vacío arriba -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Contenedor centrado -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_UserName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_UserName"
            android:inputType="text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_UserEmail"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_UserEmail"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/viewUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_UserPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_UserPassword"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Boton prueba"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- Espacio vacío abajo -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
