<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <!-- Espacio vacío arriba -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Contenedor centrado -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/Email_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_Email_Login" />

        <EditText
            android:id="@+id/txtEmail_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_Email_Login"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/Password_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_Password_Login" />

        <EditText
            android:id="@+id/txtPassword_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_Password_Login"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textSize="24sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Ingresar_Login"
            android:textSize="24sp" />

    </LinearLayout>

    <!-- Espacio vacío abajo -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
